// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button: > should render correctly when type is button 1`] = `
<DocumentFragment>
  <button
    class="block min-w-[20rem] cursor-pointer select-none bg-gradient-120 from-transparent from-0% via-transparent via-50% to-50% bg-[length:250%] p-[1.6rem] text-2xl font-[500] uppercase transition-all duration-300 hover:translate-x-4 hover:bg-[100%] bg-white to-primary text-primary hover:text-white"
    type="button"
  >
    click here
  </button>
</DocumentFragment>
`;

exports[`Button: > should render correctly when type is submit 1`] = `
<DocumentFragment>
  <button
    class="block min-w-[20rem] cursor-pointer select-none bg-gradient-120 from-transparent from-0% via-transparent via-50% to-50% bg-[length:250%] p-[1.6rem] text-2xl font-[500] uppercase transition-all duration-300 hover:translate-x-4 hover:bg-[100%] rounded-xl border border-solid border-primary bg-primary to-white text-white hover:text-primary"
    type="submit"
  >
    submit form
  </button>
</DocumentFragment>
`;
